--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.18.9",
+    "bootstrap": "^5.2.0",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1"
   },
